--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 <h2 style="text-align:center">MY FAV WEBSITE</h2>
 
 
-<p style="text-align: center;"><a href=“https://www.broadway.com/“>Click Here</a> to go to my favorite site!</p>
-
+<p style="text-align: center;font-family:heiti sc;"><a href="https://www.broadway.com/">Click Here</a> to go to my favorite site!</p>
 
 <body bgcolor="BF87D4">
 
