--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <p style="text-align:center">I am from Frisco, Texas, and I have one sister! Currently, I attend the University of Texas at Austin, where I am majoring in business. Some of my hobbies include playing the violin, singing, cooking, and traveling!</p><hr>
 
 
-<h2 style="text-align:center">MY FAV WEBSITE</h2>
+<h2 style="text-align:center">MY FAVORITE WEBSITE</h2>
 
 
 <p style="text-align: center;font-family:heiti sc;"><a href="https://www.broadway.com/">Click Here</a> to go to my favorite site!</p>
