--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h2 style="text-align:center">About Me</h2>
 
 
-<p style="text-align:center">I am from Frisco, Texas, and I have one sister! Currently, I attend the University of Texas at Austin, where I am majoring in business. Some of my hobbies include playing the violin, singing, cooking, and traveling!</p><hr>
+<p style="text-align:center;font-family:heiti sc;"">I am from Frisco, Texas, and I have one sister! Currently, I attend the University of Texas at Austin, where I am majoring in business. Some of my hobbies include playing the violin, singing, cooking, and traveling!</p><hr>
 
 
 <h2 style="text-align:center">MY FAVORITE WEBSITE</h2>
