--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1 style="text-align:center">My name is Sruthi Tekkalur, welcome to my site!</h1>
 
 
-<center><img src="http://“IMG-0836.jpeg”" width="265" height="266" align="BOTTOM"></center><hr>
+<center><img src=“IMG-0836.jpg” width="265" height="266" align="BOTTOM" /></center><hr />
 
 
 <h2 style="text-align:center">About Me</h2>
@@ -13,7 +13,7 @@
 <p style="text-align:center;font-family:heiti sc;"">I am originally from Frisco, Texas! Currently, I attend the University of Texas at Austin, where I am majoring in business. I have one sister who is three years younger than me, and we get along pretty well. Some of my hobbies include playing the violin, singing, cooking, and traveling!</p><hr>
 
 
-<h2 style="text-align:center">MY FAVORITE WEBSITE</h2>
+<h2 style="text-align:center">My Favorite Website</h2>
 
 
 <p style="text-align: center;font-family:heiti sc;"><a href="https://www.broadway.com/">Click Here</a> to go to my favorite site!</p>
