--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <h1 style="text-align:center">My name is Sruthi Tekkalur, welcome to my site!</h1>
 
 
-<img src="IMG-0836.jpg" width="265" height="266" align="BOTTOM" /></center><hr />
-
+<img src="IMG-0836.jpg" width="265" height="266" align="BOTTOM" />
 
 <h2 style="text-align:center">About Me</h2>
 
