--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <h1 style="text-align:center">My name is Sruthi Tekkalur, welcome to my site!</h1>
 
 
-<p align="center">img src="IMG-0836.jpg" width="265" height="266" align="BOTTOM"></p>
+<p align="center">
+  <img width="265" height="266" src="IMG-0836.jpg">
+</p>
 
 
 <h2 style="text-align:center">About Me</h2>
